--- a/Operators.ipynb
+++ b/Operators.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7Mvx1TN/uRUQ1MuB2AtrU",
+      "authorship_tag": "ABX9TyPm7WFdHL14eAnK5HH0zjBF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -46,7 +46,172 @@
         }
       ],
       "source": [
-        "print(5**2)"
+        "# power\n",
+        "print(5**2) # 5 squared"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# operators\n",
+        "print(5+4)\n",
+        "# 5 and 4 are operand\n",
+        "# + operator"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WK31W-PtpBqw",
+        "outputId": "5f4502f1-de5a-4507-a8a1-6e4d006ebc6d"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(5+3)\n",
+        "print(5+4.25, 5-2.5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "COnohytjpY4n",
+        "outputId": "a99214a2-a4fb-4e33-bc07-c178e65deff2"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n",
+            "9.25 2.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# +,-,* >> will be float if atleast one operand is float\n",
+        "# / is always float"
+      ],
+      "metadata": {
+        "id": "DvB5eDxyp0__"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Cristiano\"+\"Ronaldo\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t0FRud9QqKDt",
+        "outputId": "60549555-bbdb-4c4b-98a9-001eb5632a54"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CristianoRonaldo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Cristiano\"-\"Ronaldo\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 175
+        },
+        "id": "dEuXblWMqU1W",
+        "outputId": "f6ac2914-02ea-49a3-c7ba-81bdde01abf7"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-3495f8c639ab>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Cristiano\"\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m\"Ronaldo\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'str'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Cristiano\"8\"Ronaldo\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 140
+        },
+        "id": "f0A-EBNuqY92",
+        "outputId": "cd18734a-aa9d-44b4-917f-cc094c1cc039"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-ba4570598733>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(\"Cristiano\"8\"Ronaldo\")\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(7*\"Ronaldo\")\n",
+        "print(\"Ronaldo\"*7)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1YdfbEUAqmjl",
+        "outputId": "b7d36841-2301-4de9-d745-a4cb41b0eba4"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "RonaldoRonaldoRonaldoRonaldoRonaldoRonaldoRonaldo\n",
+            "RonaldoRonaldoRonaldoRonaldoRonaldoRonaldoRonaldo\n"
+          ]
+        }
       ]
     },
     {
@@ -61,7 +226,7 @@
         "id": "SyWgPOL6kHb3",
         "outputId": "36d790fe-28e4-487a-ef48-16eea016b6f6"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,7 +249,7 @@
         "id": "tbAmvj6AkSis",
         "outputId": "e465430f-19a2-4c7a-e7ef-b6e8793d9b9c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +275,7 @@
         "id": "PTtyKvfVkj99",
         "outputId": "d4be1888-a6b3-4390-f0dc-065372cb2509"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +299,7 @@
         "id": "2H6Dl_eRlDsu",
         "outputId": "cf16c4d6-9f4c-4b3b-ed56-a9cda61b1f63"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,6 +315,7 @@
       "source": [
         "print(100/30)\n",
         "#you cannot break the candy\n",
+        "# float division: you will get the greatest integer function of the actual result\n",
         "print(100//30)"
       ],
       "metadata": {
@@ -159,7 +325,7 @@
         "id": "82CAAJNMl7uk",
         "outputId": "c6aefd27-2a56-466f-a2d3-8f4c1030e8ac"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +351,7 @@
         "id": "sHWplpaxml7k",
         "outputId": "f170f9c7-0fa4-488b-8f8f-62b79d4f96a7"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,7 +375,7 @@
         "id": "D_DCXylXnKSW",
         "outputId": "ec9e3c8c-8f94-4a0e-e027-9f90fb958872"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +395,7 @@
       "metadata": {
         "id": "xh6c21vvneHz"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -245,7 +411,7 @@
         "id": "Gan33Cj7ojij",
         "outputId": "453e9e7f-e91d-4669-dbce-e6332a7095b7"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,7 +435,7 @@
         "id": "WyitdV2comCU",
         "outputId": "97896f90-46d8-4f47-b759-6a3999d3baab"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,7 +462,7 @@
       "metadata": {
         "id": "BEAoDIpspAtT"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -311,7 +477,7 @@
         "id": "WM_86xLHp4ec",
         "outputId": "ae1f35c3-f227-4353-b3cb-0fad6fa2d4c6"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,7 +500,7 @@
         "id": "sUPFk3Oop9gT",
         "outputId": "563dc3ed-89b8-4275-f24c-5b55c5611024"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +523,7 @@
         "id": "gNBoKm_RqPPj",
         "outputId": "cc7f0e79-53fb-48ff-e3bd-e80bc39ae3c0"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +549,7 @@
         "id": "mCiu76YuqoD7",
         "outputId": "23e42a0f-e173-47bd-854f-69e55215fd5f"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +568,7 @@
       "metadata": {
         "id": "U_yQk0tXr_EL"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -414,7 +580,7 @@
       "metadata": {
         "id": "2A4-sWFKsW5y"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -432,7 +598,7 @@
         "id": "yhWwFrz9seBq",
         "outputId": "3a64114e-8027-48e8-c96e-456e7b6e560b"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -462,7 +628,7 @@
         "id": "GJP-HR_BspAa",
         "outputId": "ed953572-7406-4f69-e293-65c71d924c97"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -493,7 +659,7 @@
         "id": "orcmpmRFtAaK",
         "outputId": "abf464f5-8b7b-45d8-c442-c88cf1fd6b46"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -519,7 +685,7 @@
         "id": "ZSNFm_NAtRvL",
         "outputId": "81412eea-444f-4d3d-c530-a12eeac9b2d6"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,7 +709,7 @@
         "id": "m-aev7fYt6Fy",
         "outputId": "e2824954-b86c-49c0-fc53-77ea499e1b52"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -574,7 +740,7 @@
         "id": "dMlfBk-vupKa",
         "outputId": "f4a9098f-ccc2-43cd-87dd-57e8dc5e402b"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -602,7 +768,7 @@
         "id": "2bXgkCC_u_ER",
         "outputId": "46b18bcf-a55e-473e-92bd-69a04eaaf92f"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -629,7 +795,7 @@
         "id": "UO4nCxIqvhgJ",
         "outputId": "49032c58-74a9-40f8-dffb-97c3e132199f"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -657,7 +823,7 @@
         "id": "NQouw2ZhvxtU",
         "outputId": "04f62057-fa36-46f7-ceb1-9f0ea4b2a57c"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -683,7 +849,7 @@
         "id": "d57nrJb5wKFg",
         "outputId": "ffdb3b4d-c565-460a-9d96-d1fdc2a56ba3"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -707,7 +873,7 @@
         "id": "ZzP9XRKnymwB",
         "outputId": "17fc1092-6283-4ab8-b964-49982c16aba6"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -732,7 +898,7 @@
         "id": "sXJjBSqgyvZY",
         "outputId": "8259ce12-6fd6-4a63-914d-db7f5e49c5c5"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -768,7 +934,7 @@
         "id": "nzeTeB4dzW7o",
         "outputId": "c8cc7652-10f5-40a9-a9ab-78f68cc03ffc"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -794,7 +960,7 @@
         "id": "0VSZFicrznjn",
         "outputId": "1f517d3c-ef8e-496d-d9f4-189c2adc23b9"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -819,7 +985,7 @@
         "id": "ccAQlWmlzxbf",
         "outputId": "812b271d-ed92-4671-9ab8-a8e2b3432b1d"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -843,7 +1009,7 @@
         "id": "R8dOCotI0N1g",
         "outputId": "e5a5279b-1ea3-4a18-a633-2c70aab5864f"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -862,7 +1028,7 @@
       "metadata": {
         "id": "jz3VJjF30W0g"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -877,7 +1043,7 @@
         "id": "_SOc3pwV0cpv",
         "outputId": "8891cab6-ddc2-4cf2-c4ed-5b6913c69755"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -902,7 +1068,7 @@
         "id": "jdPmE2Ch0qRm",
         "outputId": "67bee642-cf77-4805-abc9-a8e47f7c439e"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -928,7 +1094,7 @@
         "id": "lpm1WS9h1FqH",
         "outputId": "957fbfdb-f97f-4c58-d08d-3000d1e40f06"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -955,7 +1121,7 @@
         "id": "INZZkT021QLn",
         "outputId": "9bbcd6a5-d6cc-4f95-cf8f-9c7627f17c62"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -979,7 +1145,7 @@
         "id": "WEzotGSF1ZUn",
         "outputId": "4e1f2713-e0d1-4d50-8390-c2a8d6326424"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1002,7 +1168,7 @@
         "id": "rJpmqVfy1d5H",
         "outputId": "46749326-f7e2-4e36-f55d-26e256b1128c"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1027,7 +1193,7 @@
         "id": "GZ4NFH3O1g1O",
         "outputId": "4e376e70-0c60-4252-f0ce-fb17c9e2e8aa"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1050,7 +1216,7 @@
       "metadata": {
         "id": "3nDAYzTq1q1G"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1068,7 +1234,7 @@
         "id": "JOwHTSfP2Hhn",
         "outputId": "a3c1eff1-0a94-4ac7-c18c-cf7711fcb42b"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1095,7 +1261,7 @@
         "id": "cJLsYf-a2Wp3",
         "outputId": "eeb9ca41-8d87-4b78-8750-0d0f26024e9c"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1122,7 +1288,7 @@
         "id": "nReRtUVv2mW_",
         "outputId": "f38d04f1-7d5a-402f-9653-337771c29739"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1149,7 +1315,7 @@
         "id": "PzRocOAW2o3v",
         "outputId": "9261b024-3a53-44b6-907c-4475e1e98e2b"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1176,7 +1342,7 @@
         "id": "jdeEx5MP2t8W",
         "outputId": "a759d80c-d006-4f17-b0e9-038d65050021"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1202,7 +1368,7 @@
         "id": "Ri50-yer2w4X",
         "outputId": "56f8cea3-8f00-4c23-f380-656cae02d6e1"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1225,7 +1391,7 @@
         "id": "ZYyWCKuL3MW-",
         "outputId": "b5240d14-45cf-4947-e982-6496b0c0795f"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1246,7 +1412,7 @@
       "metadata": {
         "id": "O2Zn9udp3jwW"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1264,7 +1430,7 @@
         "id": "jhrzSVvC3y2O",
         "outputId": "599ca1d2-9cb1-4ca9-d8da-f34052207a9a"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1277,9 +1443,55 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print(\"54\"+\"23\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WCzAQuSd4RnO",
+        "outputId": "4824be44-c7ed-43ee-d3b8-b512d2ecc363"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5423\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print((4+3)//2+6)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jgqkzr-3UEt5",
+        "outputId": "d1642b36-f7c6-4f75-e3bb-36531540f198"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "WCzAQuSd4RnO"
+        "id": "Ffyn7lC2VHx5"
       },
       "execution_count": null,
       "outputs": []
